--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinity Clicker</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link media="only screen and (max-width: 420px)" href="styles/mobilePortrait.css" type="text/css" rel="stylesheet">
+    <link media="only screen and (min-width: 421px) and (max-width: 680px)" href="styles/mobileLandscape.css" type="text/css"
+        rel="stylesheet">
+    <link media="only screen and (min-device-width: 681px)" href="styles/desktop.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="tabContainer">
