Added A Reset Button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <div class="tab" id="settings">
         <button onClick="saveGame()" class="generator">Save Game</button>
         <button onClick="loadGame()" class="generator">Load Game</button>
+        <div><b style="color: #f00">WARNING!</b><br>This Action Is PERMANENT And Cannot Be Indone.<br><br></div>
+        <button onClick="number = 0; generators = []; alert("Game Reset")" class="generator">RESTE
+Reset
     </div>
     <div class="tab" id="achivements">
 
