--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h2>Shop</h2>
         <div class="shopTabContainer">
             <button class="shopTabButton" id="defaultOpen" onclick="openTab(event, 'autobuyerContainer', 'shopTab', 'shopTabButton', 'flex')">Autobuyers</button>
-            <button class="shopTabButton" id="defaultOpen" onclick="openTab(event, 'autobuyerContainer', 'shopTab', 'shopTabButton', 'flex')">Infinitum</button>
-            <button class="shopTabButton" id="defaultOpen" onclick="openTab(event, 'autobuyerContainer', 'shopTab', 'shopTabButton', 'flex')">Infinitum</button>
+            <button class="shopTabButton" id="defaultOpen" onclick="openTab(event, 'infinitumContainer', 'shopTab', 'shopTabButton', 'flex')">Infinitum</button>
+            <button class="shopTabButton" id="defaultOpen" onclick="openTab(event, 'iterumContainer', 'shopTab', 'shopTabButton', 'flex')">Infinitum</button>
         </div>
         <div class="shopTab" id="autobuyerContainer">
             <div class="autobuyer" id="auto1" onClick="buyAutobuyer(1)">test</div>
@@ -69,6 +69,14 @@
             <div class="autobuyer" id="auto8" onClick="buyAutobuyer(8)">test</div>
             <div class="autobuyer" id="auto9" onClick="buyAutobuyer(9)">test</div>
             <div class="autobuyer" id="auto10" onClick="buyAutobuyer(10)">test</div>
+        </div>
+        <div class="shopTab" id="infinitumContainer">
+            <h3>Infinitum</h3>
+            Comming Soon...
+        </div>
+        <div class="shopTab" id="iterumContainer">
+            <h3>Interum</h3>
+            Comming Soon...
         </div>
     </div>
     <div class="tab" id="dev">
