--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button onClick="changeTab('achivement')" class="tabButton">Achivements</button>
     <button onClick="changeTab('help')" class="tabButton">Help</button>
     <button onClick="changeTab('about')" class="tabButton">About</button>
-    <button onClick="changeTab('dev')" class="tabButton">DEV</button>
+    <button onClick="changeTab('dev')" class="tabButton" style="display: hidden;">DEV</button>
   </div>
   <div class="page" id="infinityPage" style="display: none">
     <div style="width: 100vw; height: 50vh" class="center">
